feat: 그룹 및 회원 통합검색 구ã현완료